--- a/src/components/layout/OrderSection/OrderSection.css
+++ b/src/components/layout/OrderSection/OrderSection.css
@@ -68,7 +68,7 @@
 .order-item-image {
     width: 70px;
     height: 70px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 10px;
     border: 1px solid var(--border);
 }
